manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
    component: main
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
        component: main
    spec:
      containers:
      - name: registry
        image: registry:2.5
        imagePullPolicy: Always
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: image-store
          mountPath: /var/lib/registry
        ports:
        - containerPort: 5000
          name: registry
          protocol: TCP
      volumes:
      - name: image-store
        emptyDir: {}
        # persistentVolumeClaim:
        #   claimName: kube-registry-pvc
