manifests/registry-proxy-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: registry-proxy
  labels:
    app: registry
    component: proxy
spec:
  template:
    metadata:
      labels:
        app: registry
        component: proxy
    spec:
      containers:
      - name: registry-proxy
        image: gcr.io/google_containers/kube-registry-proxy:0.3
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - name: registry
          containerPort: 5000
          hostPort: 5000
