manifests/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app: registry
  namespace: registry
  labels:
    app: registry
spec:
  type: NodePort
  ports:
  - name: registry
    port: 5000
    protocol: TCP
  selector:
    k8s-app: registry
